# close-to-light

./: .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  bacon.toml  close-to-light.js  close-to-light.wasm  flake.nix  geng_template.js  geng_template.wasm  index.html  minimal.nix
.cargo/: config.toml
.github/workflows/: cleanup.yml  deploy.yml
assets/: config.ron  dither_shader.glsl  editor.ron  level.json  level.ron
assets/dither/: dither_shader.glsl
assets/fonts/pixel/: shader.glsl
assets/groups/: _list.ron
assets/groups/2/: levels.cbor
assets/groups/FarFromDark/: meta.toml
assets/groups/PixelPeekerPolka/: meta.toml
assets/groups/Rest/: meta.toml
assets/levels/: _list.ron  level.json  test_level.json
assets/levels/1/: levels.cbor  meta.toml
assets/levels/2/: levels.cbor  meta.toml
assets/levels/3/: levels.cbor  meta.toml
assets/levels/4/: levels.cbor  meta.toml
assets/levels/5/: levels.cbor  meta.toml
assets/levels/6/: levels.cbor  meta.toml
assets/levels/FarFromDark/: level_normal.json  meta.toml
assets/levels/classic/: meta.toml
assets/levels_1/1/: meta.toml
assets/levels_1/2/: levels.cbor
assets/levels_1/3/: levels.cbor  meta.toml
assets/shaders/: color_correction.glsl  crt.glsl  ellipse.glsl  fire.glsl  fire_flow_field.glsl  fire_particles.glsl  light.glsl  light_fire.glsl  masked.glsl  masked_sdf.glsl  noise_effects.glsl  replace_colors.glsl  sdf.glsl  solid.glsl  solid_ui.glsl  texture.glsl
crates/ctl-assets/: Cargo.toml
crates/ctl-assets/src/: hot.rs  lib.rs  options.rs
crates/ctl-client/: Cargo.toml
crates/ctl-client/src/: auth.rs  error.rs  lib.rs  native.rs
crates/ctl-constants/: Cargo.toml
crates/ctl-constants/src/: lib.rs
crates/ctl-context/: Cargo.toml
crates/ctl-context/src/: discord.rs  lib.rs  music.rs  sfx.rs
crates/ctl-core/: Cargo.toml
crates/ctl-core/src/: auth.rs  lib.rs  score.rs  types.rs  util.rs
crates/ctl-core/src/interpolation/: bezier.rs  mod.rs  spline.rs  transform.rs
crates/ctl-core/src/legacy/: mod.rs  v1.rs  v2.rs  v3.rs
crates/ctl-core/src/model/: level.rs  light.rs  mod.rs  movement.rs  player.rs  score.rs  vfx.rs
crates/ctl-core/src/model/collider/: mod.rs  shape.rs
crates/ctl-core/src/model/level/: config.rs  serde.rs  state.rs
crates/ctl-derive/: Cargo.toml
crates/ctl-derive/src/: lib.rs  texture_atlas.rs
crates/ctl-editor/: Cargo.toml
crates/ctl-editor/src/: clipboard.rs  config.rs  grid.rs  group.rs  history.rs  interpolation_cache.rs  level.rs  lib.rs  state.rs  tests.rs
crates/ctl-editor/src/action/: editor.rs  level.rs  mod.rs  state.rs
crates/ctl-editor/src/ui/: config.rs  edit.rs  mod.rs
crates/ctl-editor/src/ui/widgets/: context_menu.rs  mod.rs  timeline.rs  tooltip.rs
crates/ctl-font/: Cargo.toml
crates/ctl-font/src/: font.glsl  lib.rs
crates/ctl-local/: Cargo.toml
crates/ctl-local/src/: achievements.rs  cache.rs  leaderboard.rs  lib.rs
crates/ctl-local/src/fs/: mod.rs  native.rs  web.rs
crates/ctl-logic/: Cargo.toml
crates/ctl-logic/src/: lib.rs  model.rs
crates/ctl-render-core/: Cargo.toml
crates/ctl-render-core/src/: lib.rs  texture_atlas.rs
crates/ctl-server/: Cargo.toml
crates/ctl-server/migrations/: 20240123104528_init.sql  20240212150648_init.sql  20240521194219_accounts.sql  20240530074531_recommend.sql  20250610135700_users.sql  20250610135845_levels.sql  20250610141316_scores.sql  20250610142424_user_accounts.sql  20251214172600_steam.sql
crates/ctl-server/src/: main.rs  prelude.rs  setup.rs
crates/ctl-server/src/api_key/: mod.rs
crates/ctl-server/src/database/: auth.rs  error.rs  init.rs  mod.rs  types.rs
crates/ctl-server/src/server/: artists.rs  auth.rs  board.rs  group.rs  level.rs  level_set.rs  mod.rs  music.rs  musicians.rs  player.rs  tests.rs  users.rs
crates/ctl-server/src/server/auth/: discord.rs  mod.rs  native.rs  steam.rs  token.rs
crates/ctl-ui/: Cargo.toml
crates/ctl-ui/src/: context.rs  layout.rs  lib.rs  state.rs  util.rs  widget.rs
crates/ctl-ui/src/geometry/: mod.rs
crates/ctl-ui/src/widget/: beat_time.rs  button.rs  color.rs  confirm.rs  dropdown.rs  explore.rs  geometry.rs  icon.rs  input.rs  notification.rs  slider.rs  text.rs  value.rs
crates/ctl-util/: Cargo.toml
crates/ctl-util/src/: lerp.rs  lib.rs  sod.rs  task.rs
dev/: close-to-light.js  close-to-light.wasm  index.html
dev-assets/: steam-rich-presence.txt
dev-assets/trailer/: levels.cbor  meta.toml
dev/assets/: config.ron  dither_shader.glsl  editor.ron
dev/assets/dither/: dither_shader.glsl
dev/assets/fonts/: pixel.ttf.other
dev/assets/groups/: _list.ron
dev/assets/levels/: test_level.json
dev/assets/shaders/: crt.glsl  light.glsl  masked.glsl  rgb_split.glsl  sdf.glsl  texture_ui.glsl
groups/levels/: 11  13  15  2  4  5  7  8
src/: assets.rs  command.rs  context.rs  editor.rs  game.rs  leaderboard.rs  main.rs  media.rs  menu.rs  prelude.rs  task.rs  util.rs
src/assets/: font.glsl  font.rs  mod.rs
src/context/: mod.rs  music.rs
src/editor/: clipboard.rs  config.rs  draw.rs  group.rs  handle_event.rs  history.rs  level.rs  mod.rs  state.rs  ui.rs
src/editor/action/: editor.rs  level.rs  mod.rs  state.rs
src/editor/ui/: config.rs  edit.rs
src/game/: ui.rs
src/local/: cache.rs  fs.rs  mod.rs
src/local/fs/: native.rs  web.rs
src/media/: trailer.rs
src/menu/: level.rs  loading.rs  main.rs  splash.rs
src/menu/game_preview/: mod.rs
src/menu/level/: ui.rs
src/model/: config.rs  level.rs  light.rs  mod.rs  movement.rs  options.rs  player.rs  score.rs
src/model/collider/: mod.rs  shape.rs
src/model/level/: config.rs  saved.rs  state.rs
src/model/logic/: event.rs  mod.rs
src/render/: dither.rs  editor.rs  game.rs  mask.rs  menu.rs  mod.rs  post.rs  ui.rs  util.rs
src/render/editor/: game.rs  ui.rs
src/ui/: context.rs  layout.rs  leaderboard.rs  mod.rs  options.rs  pause.rs  profile.rs  score.rs  state.rs  sync.rs  widget.rs  window.rs
src/ui/geometry/: mod.rs
src/ui/widget/: beat_time.rs  button.rs  checkbox.rs  icon.rs  (+17 more)
src/util/: sod.rs  texture_atlas.rs
(+63 files in other folders)
