[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ctl-core = { path = "crates/ctl-core" }
ctl-client = { path = "crates/ctl-client" }

# Common
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.51"
color-eyre = "0.6.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
enum-iterator = "1.4.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
sha2 = "0.10.8"
data-encoding = "2.5.0"

# Game
geng = "0.18"
geng-utils = "0.3.0"
parry2d = "0.13.5"
async-executor = "1.8.0"

# Server
axum = { version = "0.7.2", features = ["multipart"] }
axum-login = "0.12"
password-auth = "0.3.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tower-sessions = { version = "0.9.0", default-features = false, features = [
    "sqlite-store",
    "deletion-task",
] }
time = "0.3.31"
http-body-util = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["uuid", "runtime-tokio", "sqlite"] }
dotenv = "0.15.0"

# Client
reqwest = { version = "0.11.23", features = ["json", "multipart", "cookies"] }

[package]
name = "close-to-light"
version.workspace = true
edition.workspace = true

[dependencies]
ctl-client.workspace = true
geng.workspace = true
geng-utils.workspace = true
parry2d.workspace = true
enum-iterator.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
sha2.workspace = true
data-encoding.workspace = true
async-executor.workspace = true

[patch.crates-io]
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" } # TODO: until https://github.com/smol-rs/async-broadcast/pull/47 is merged
geng = { git = "https://github.com/geng-engine/geng", rev = "38a550f6389d8b2720fefd2f42b5fb58fba106c2" }
