[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ctl-core = { path = "crates/ctl-core" }
ctl-client = { path = "crates/ctl-client" }

# Common
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.51"
color-eyre = "0.6.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
enum-iterator = "1.4.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
sha2 = "0.10.8"
data-encoding = "2.5.0"
generational-arena = "0.2.9"
bincode = "1.3.3"
cbor4ii = { version = "0.3.3", features = ["serde1", "use_std"] }

# Game
geng = "0.18"
geng-utils = "0.3.0"
parry2d = "0.13.5"
async-executor = "1.8.0"
webbrowser = "1.0.1"
directories = "5.0.1"
base64 = "0.22.1"
async-compat = "0.2.4"

# Server
axum = { version = "0.7.2", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-login = "0.15"
headers = "0.4"
password-auth = "0.3.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tower-sessions = { version = "0.12", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.12", features = ["sqlite"] }
time = "0.3.31"
http-body-util = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["uuid", "runtime-tokio", "sqlite"] }
dotenv = "0.15.0"

# Client
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
url = "2.5.0"

[package]
name = "close-to-light"
version.workspace = true
edition.workspace = true

[dependencies]
ctl-client.workspace = true
geng.workspace = true
geng-utils.workspace = true
parry2d.workspace = true
enum-iterator.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
sha2.workspace = true
data-encoding.workspace = true
async-executor.workspace = true
generational-arena.workspace = true
bincode.workspace = true
webbrowser.workspace = true
directories.workspace = true
base64.workspace = true
async-compat.workspace = true
cbor4ii.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rexie = "0.5.0"
serde-wasm-bindgen = "0.6.5"

[patch.crates-io]
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" } # TODO: until https://github.com/smol-rs/async-broadcast/pull/47 is merged
geng = { git = "https://github.com/geng-engine/geng", rev = "38a550f6389d8b2720fefd2f42b5fb58fba106c2" }
