[package]
name = "ctl-client"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctl-core.workspace = true
reqwest.workspace = true
url.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bincode.workspace = true
thiserror.workspace = true
