[package]
name = "ctl-client"
version.workspace = true
edition.workspace = true

[features]
steam = ["dep:steamworks"]

[dependencies]
ctl-constants.workspace = true
ctl-core.workspace = true
reqwest.workspace = true
url.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bincode.workspace = true
thiserror.workspace = true
steamworks = { workspace = true, optional = true }
hex.workspace = true
