[package]
name = "ctl-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng.workspace = true
geng-utils.workspace = true
serde.workspace = true
parry2d.workspace = true
uuid.workspace = true

data-encoding.workspace = true
sha2.workspace = true
