[package]
name = "ctl-local"
version.workspace = true
edition.workspace = true

[dependencies]
ctl-core.workspace = true
ctl-client.workspace = true
ctl-util.workspace = true
ctl-assets.workspace = true
generational-arena.workspace = true
geng.workspace = true
serde.workspace = true
cbor4ii.workspace = true
base64.workspace = true
directories.workspace = true
webbrowser.workspace = true
time.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
rexie = "0.6.2"
serde-wasm-bindgen = "0.6.5"
