[package]
name = "ctl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctl-core.workspace = true

axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
http-body-util.workspace = true
uuid.workspace = true

sqlx.workspace = true
dotenv.workspace = true

clap.workspace = true
thiserror.workspace = true
serde.workspace = true
rand.workspace = true
color-eyre.workspace = true

[dev-dependencies]
serde_json.workspace = true
