[package]
name = "ctl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctl-core.workspace = true

axum.workspace = true
axum-login.workspace = true
password-auth.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
uuid.workspace = true
time.workspace = true

sqlx.workspace = true
dotenv.workspace = true

clap.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
rand.workspace = true
color-eyre.workspace = true

data-encoding.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
