[package]
name = "ctl-server"
version.workspace = true
edition.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctl-constants = { workspace = true, features = ["steam"] }
ctl-core.workspace = true

axum.workspace = true
axum-extra.workspace = true
axum-login.workspace = true
headers.workspace = true
password-auth.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
uuid.workspace = true
time.workspace = true

sqlx.workspace = true
dotenv.workspace = true

clap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
cbor4ii.workspace = true
rand.workspace = true
color-eyre.workspace = true

data-encoding.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
